MINOR: Replace Collections factory methods with Java 11+ equivalents in group-coordinator and part of clients
Signed-off-by: see-quick <maros.orsak159@gmail.com>